# placeholder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dot.h  gfx_funcs.cpp  gfx_funcs.h  main.cpp  phys_eng.cpp  phys_obj.cpp  phys_obj.h  polygon.cpp  polygon.h  ragdoll.h
include/: cam.h  dot.h  phys_eng.h  phys_obj.h  polygon.h
src/: cam.cpp  gfx_funcs.cpp  phys_eng.cpp  phys_obj.cpp  polygon.cpp
